[FEAT] 사용자 ID 체계 변경 및 API 인터페이스 구조 개선
- id → userId로 필드명 변경 (Long → String)
- 회원가입/로그인 시 userId 사용하도록 수정
- API 인터페이스 중복 제거 및 역할 분리
- 스웨거 문서 상세화 및 구조화
- Lombok 컴파일 오류 해결

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 HELP.md
-.gradle
-build/
+/.gradle/
+/.idea/
+/build/
 /src/main/resources/secret/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
