[FEAT]  상품 검색 가격비교 도메인 개발
- 상품 검색 관련 DTO, 엔티티, 서비스, 컨트롤러 구현
- 네이버 쇼핑 API 연동 및 쿼터 관리 서비스 구현
- 상품 캐싱 및 변환 서비스 구현
- 상품 즐겨찾기 및 검색 히스토리 기능 구현
- REST API 엔드포인트 구현 (/api/products/search, /health)
- 전면 테스트 코드 작성 및 검증 완료
- 예외 처리 및 응답 구조 정리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,12 +20,23 @@ jwt:
   refresh:
     expiration: 14
 
+# 네이버 쇼핑 API 설정
+naver:
+  shopping:
+    client-id: ${NAVER_CLIENT_ID:your_client_id_here}
+    client-secret: ${NAVER_CLIENT_SECRET:your_client_secret_here}
+    api-url: https://openapi.naver.com/v1/search/shop.json
+
 exclude-auth-path-patterns:
   paths:
-    - path-pattern: /api/users/sign-up
+    - path-pattern: /api/users/signup
       method: POST
     - path-pattern: /api/users/login
       method: POST
+    - path-pattern: /api/products/search
+      method: GET
+    - path-pattern: /api/products/health
+      method: GET
     - path-pattern: /swagger-ui.html
       method: GET
     - path-pattern: /swagger-ui/index.html
@@ -47,10 +58,14 @@ exclude-auth-path-patterns:
 
 exclude-blacklist-path-patterns:
   paths:
-    - path-pattern: /api/users/sign-up
+    - path-pattern: /api/users/signup
       method: POST
     - path-pattern: /api/users/login
       method: POST
+    - path-pattern: /api/products/search
+      method: GET
+    - path-pattern: /api/products/health
+      method: GET
     - path-pattern: /swagger-ui.html
       method: GET
     - path-pattern: /swagger-ui/index.html
