[FIX] application.yml에서 secret 분리

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ dependencies {
 
 	// DB
 	runtimeOnly 'org.postgresql:postgresql'
+	testRuntimeOnly 'com.h2database:h2'
 
 	// JWT
     implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
