[FEAT] 네이버 API 연동

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 # Secret 설정 파일 import
 spring:
-  profiles:
-    include: secret
+  config:
+    import: optional:secret/application-secret.yml
   jpa:
     hibernate:
       ddl-auto: create-drop
