[FEAT] 트렌드 도메인 완성 및 상품 도메인 리팩토링
- 네이버 데이터랩 API 연동으로 트렌드 분석 시스템 구축
- 클릭 추이, 디바이스/성별/연령 분포 분석 기능 구현
- 트렌드 방향성 및 강도 계산 기능 추가
- Redis 기반 트렌드 캐싱 시스템 구현
- 상품 도메인 아키텍처 개선 (Controller → UseCase → Service)
- DTO 패키지를 논리적 그룹으로 구조화 (datalab, trend, common)
- 모든 도메인에 대한 포괄적인 테스트 코드 작성
- Mockito 사용법 개선 및 테스트 격리 환경 구축
- 트렌드 API 엔드포인트에 인증 적용
- DTO 필드 순서 및 생성자 문제 해결

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,8 @@ exclude-auth-path-patterns:
       method: GET
     - path-pattern: /api/products/health
       method: GET
+    - path-pattern: /api/trends/health
+      method: GET
     - path-pattern: /swagger-ui.html
       method: GET
     - path-pattern: /swagger-ui/index.html
@@ -51,6 +53,8 @@ exclude-blacklist-path-patterns:
     - path-pattern: /api/products/search
       method: GET
     - path-pattern: /api/products/health
+      method: GET
+    - path-pattern: /api/trends/health
       method: GET
     - path-pattern: /swagger-ui.html
       method: GET
