[FEAT] @CurrentUser 어노테이션 적용 및 클릭아웃 도메인 구현
🔧 Controller 개선사항:
- @CurrentUser 어노테이션을 모든 Controller에 적용하여 사용자 인증 로직 개선
- ProductController: 즐겨찾기 및 개인화 검색 기능 추가
- TrendController: 개인화 트렌드 검색 및 관심 키워드 관리 기능 추가
- AuthController: @CurrentUser 기반 로그아웃 기능 추가
- UserController: 기존 @CurrentUser 사용법 유지

🆕 새로운 도메인 추가:
- ClickoutController: 클릭아웃 분석 및 가격 히스토리 로깅 기능 구현
- 사용자별 클릭 통계, 개인화 추천, 클릭 히스토리 관리 기능

🏗️ 아키텍처 개선:
- Swagger API 어노테이션을 global/annotation에서 global/swagger로 이동
- UserAuthUseCase에 @CurrentUser 지원을 위한 logout 오버로드 메서드 추가

🧪 테스트 인프라 구축:
- BaseControllerTest: 공통 테스트 설정을 위한 기본 클래스
- TestCurrentUserArgumentResolver: @CurrentUser 시뮬레이션 헬퍼
- TestExceptionAdvice: 예외 처리 테스트를 위한 전용 Advice
- 모든 Controller 테스트에서 @CurrentUser 어노테이션 시뮬레이션 지원
- 단위 테스트와 통합 테스트 역할 분리 (유효성 검증은 통합 테스트에서)

✅ 테스트 결과:
- 193 tests completed, 0 failed
- 모든 기존 테스트 통과 및 새로운 테스트 추가

🔍 주요 파일 변경:
- 수정: 5개 Controller 파일 (@CurrentUser 적용)
- 삭제: 4개 annotation 파일 (swagger로 이동)
- 추가: clickout 도메인 전체 구조
- 추가: 테스트 헬퍼 클래스 3개

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,8 @@ exclude-auth-path-patterns:
       method: GET
     - path-pattern: /api/trends/health
       method: GET
+    - path-pattern: /api/clickout/log-click
+      method: POST
     - path-pattern: /swagger-ui.html
       method: GET
     - path-pattern: /swagger-ui/index.html
@@ -56,6 +58,8 @@ exclude-blacklist-path-patterns:
       method: GET
     - path-pattern: /api/trends/health
       method: GET
+    - path-pattern: /api/clickout/log-click
+      method: POST
     - path-pattern: /swagger-ui.html
       method: GET
     - path-pattern: /swagger-ui/index.html
