--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -26,10 +26,23 @@ spring:
       database: 0
   # 데이터베이스 설정 (테스트용 H2)
   datasource:
-    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MySQL
     username: sa
     password: 
     driver-class-name: org.h2.Driver
+  # JPA 설정
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
+        format_sql: true
+  # SQL 초기화 비활성화
+  sql:
+    init:
+      mode: never
 
 # 로깅 설정
 logging:
