--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,10 @@ dependencies {
     implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.7.0'
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
 
-		// Redis
+	// Google AI (Gemini)
+	implementation 'com.google.genai:google-genai:1.15.0'
+
+	// Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
 
